   (e.g. 5px) gap on the side.
3. Sort players in 'Information' dialog.
4. Use 'v-show' to control when to show mobile pages.
5. Fix 'clickability' of home screen item checkbox list.
6. When using 'More' menu item for track information, only clear browse history
   stack if it has 50 or more steps.
7. Add Russian translation - thanks to sky418.

1.0.0
-----
 1. Add action to create favourite folders.
 2. Allow moving favourites into folders.
 3. Add action to move favourite to parent folder.
 4. Make list of composer and conductor genres configurable.
 5. Optionally support listing and editing presets.
 6. Support "auto=false" URL query parameter to disable automatic layout
    switching.
 7. Always sort favourite folders, and place these first, even if sorting of
    favourites is disabled.
 8. Highlight active jumplist item.
 9. For mobile browsers, if a list has more than 25 items and no jumplist, then
    create a fake one with dots. Allows quickly jumping to middle, etc.
10. Allow renaming of pinned items.
11. When a menu is open, try to ignore click events and just close menu. This is
    to work-around a VuetifyJS issue.
12. Remove section headers.
13. Add a 'My Music' entry, and place 'Artists', etc, within this.
14. Allow pinning of items from 'My Music.'
15. Always use server provided categories.
16. Allow drag'n'drop re-ordering of top-level browse items.
17. Add option to auto-sort home screen items, mainly for iPhone as this does
    not support drag'n'drop.
18. Allow hiding 'My Music', etc, from home screen.
19. Add music file icon to 'Music Folder' browsing.
20. When checking if can activate a text item, check for "do" command as well as
    "go" command.
21. When checking text-click response, if an empty list is received
    (or created), just show alert with activated text.
22. Refresh player list each time 'Manage Players' is opened.
23. For mobile layout, show play/pause button in main toolbar for browse and
    queue pages.